fix user response
