# src/main/webui/openapi.yaml
@@ -105,7 +105,9 @@ paths:
         "200":
           description: OK
           content:
-            application/json: {}
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
         "401":
           description: Not Authorized
         "403":
@@ -306,6 +308,10 @@ components:
           description: HTTP status code
           type: integer
           example: 400
+    LocalDateTime:
+      format: date-time
+      type: string
+      example: 2022-03-10T12:15:50
     LoginResponse:
       description: Login Response Object
       required:
@@ -403,6 +409,8 @@ components:
         createdAt:
           description: User creation date
           type: string
+          allOf:
+          - $ref: "#/components/schemas/LocalDateTime"
           example: 2024-08-14T11:43:42.63617
     HealthCheckResponse:
       type: object
